<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/small_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <ImageView
            android:id="@+id/backGroundImage_friendwall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/background_height_wall"
            android:adjustViewBounds="true"
            android:scaleType="matrix"
            android:background="@color/colorLittleGray" />
        <ImageView
            android:id="@+id/backImage_friendwall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_back"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:alpha="0.6"/>
        <ImageView
            android:id="@+id/menuImage_friendwall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_menu_vertical"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:alpha="0.6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                    android:id="@+id/avatarImage_friendwall"
                    android:layout_width="@dimen/avatar_edge_wall"
                    android:layout_height="@dimen/avatar_edge_wall"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:background="@drawable/circle_white_background"
                    android:padding="@dimen/extra_small_margin"
                    android:src="@drawable/circle_gray_background" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/extra_small_margin"
                android:layout_marginLeft="@dimen/extra_small_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/extra_small_margin">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/postNumberTextView_friendwall"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="37"
                            android:textSize="20dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorDark"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/post"
                            android:textAlignment="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/followerNumberTextView_friendwall"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="159K"
                            android:textSize="20dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorDark"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/follower_eng"
                            android:textAlignment="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/followingNumberTextView_friendwall"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="105"
                            android:textSize="20dp"
                            android:textAlignment="center"
                            android:textColor="@color/colorDark"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/following_eng"
                            android:textAlignment="center"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/extra_small_margin">
                    <Button
                        android:id="@+id/followButton_friendwall"
                        android:layout_margin="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/following"
                        android:textStyle="bold"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/colorWhite"
                        android:background="@color/colorBlue"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/small_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/usernameTextView_friendwall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorDark"
            android:text="yudaidang"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/biographyTextView_friendwall"
            android:layout_marginTop="@dimen/extra_small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:maxLines="4"
            android:ellipsize="end"
            android:textSize="@dimen/medium_text"
            android:text="Hello world. I'm a Vietnamese girl.\nI'm studying IT. Love pop music and Korean drama so much "/>
    </LinearLayout>

</LinearLayout>
